polychem/src/polymers/snapshots/polychem__polymers__polymer_chemistry__tests__parse_complete_parse_error.snap
---
source: polychem/src/polymers/polymer_chemistry.rs
description: polymer_chemistry.map_err(WrapErr)
expression: out
---
  × encountered an error during testing

Error:   × unexpected node `group`
    ╭─[test:20:13]
 19 │         AminoAcid {
 20 │             group "Amino" at="N-Terminal"
    ·             ───────────────┬──────────────
    ·                            ╰── unexpected node
 21 │             functional-group "Carboxyl" at="C-Terminal"
 22 │         }
    ╰────

