polychem/src/polymers/snapshots/polychem__polymers__polymer_chemistry__tests__parse_massless_modification.snap
---
source: polychem/src/polymers/polymer_chemistry.rs
expression: modifications.unwrap()
---
{
  "Ac": ModificationDescription(
    name: "O-Acetylation",
    lost: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    gained: ChemicalComposition(
      chemical_formula: [],
      particle_offset: None,
    ),
    targets: [
      Target(
        group: "Hydroxyl",
        location: Some("6-Position"),
        residue: None,
      ),
    ],
  ),
}
